--- a/views/general/index.html
+++ b/views/general/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mojave: os</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<style>
+    html, body {
+        margin: 0px;
+        padding: 0px;
+    }
+</style>
 <body>
+
+    <nav class="navbar bg-light p-3">
+        <div class="d-flex align-items-center">
+            <img src="https://raw.githubusercontent.com/Mojave-OS/Kernel-01A/main/documentation/images/mojave-logo-ghub.png" alt="">
+            <a class="navbar-brand p-3" href="#" style="color: black; font-size: 2em;">Mojave OS</a>
+        </div>
+      </nav>
+
+    <div class="container-fluid">
+        <div class="row p-3">
+            <div class="col text-center">
+                <img src="https://raw.githubusercontent.com/Mojave-OS/Kernel-01A/main/documentation/images/mojave-logo.png" alt="">
+                <p>
+                    We are a group of developers and engineers working on honing our skills. 
+                </p>
+            </div>
+            <div class="col">
+                <h1>Join our team</h1>
+                <p>We are currently in stealth mode. Message me if you're interested in the following:</p>
+                <ol class="list-group">
+                    <li class="list-group-item">Kernel Design</li>
+                    <li class="list-group-item">eBike Design</li>
+                    <li class="list-group-item">Hardware & Circuitry</li>
+                </ol>
+
+                <blockquote class="shadow shadow-lg p-3 mt-5 bg-light text-dark rounded">
+                    <h3>How to Join?</h3>
+                    <p>Send me an email to <mark>diego.alba@malarylib.com</mark>, and I'll add you to our team! There's no interview! You don't have to know
+                        about kernel design, or hardware. We just ask that you are interested in the end-product!
+                    </p>
+                </blockquote>
+            </div>
+            
+            
+        </div>
+    </div>    
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     
 </body>
 </html>
